<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/ScrollView01"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:scrollbars="vertical" >

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:text="@string/select_destination"
            android:textSize="24sp" >
        </TextView>

        <EditText
            android:id="@+id/destination_text"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="18dp"
            android:text="@string/destination_name" >
        </EditText>

        <EditText
            android:id="@+id/destination_countryCode"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="23dp"
            android:text="@string/destination_code" >
        </EditText>

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="28dp"
            android:text="@string/metricChoice"
            android:textSize="24sp" >
        </TextView>

        <LinearLayout
            android:id="@+id/linearPrice"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal" >

            <RadioGroup
                android:id="@+id/metricChoice"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:orientation="horizontal" >
                
                 <RadioButton
                    android:id="@+id/time_Metric"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:checked="true" />

                <RadioButton
                    android:id="@+id/drive_Metric"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" 
                    android:layout_marginLeft="50dp"/>

                <RadioButton
                    android:id="@+id/ferry_Metric"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="70dp" />
            </RadioGroup>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/metricLayout"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal" >
            
            <TextView
                android:id="@+id/time_Test"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:text="@string/time_Button"
                android:textSize="12sp" >
            </TextView>

            <TextView
                android:id="@+id/drive_Test"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="25dp"
                android:text="@string/drive_Button"
                android:textSize="12sp" >
            </TextView>

            <TextView
                android:id="@+id/ferry_Test"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="40dp"
                android:text="@string/sail_Button"
                android:textSize="12sp" >
            </TextView>
        </LinearLayout>

        <Button
            android:id="@+id/stateDestination_button"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="65dp"
            android:text="@string/create_button" />

        <Button
            android:id="@+id/return_button"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="68dp"
            android:text="@string/return_button" >
        </Button>
    </LinearLayout>

</ScrollView>